specify the type of shell in use (bash, csh, etc).

** The URL package accepts now the protocols "ssh", "scp" and "rsync".
When `url-handler-mode' is enabled, file operations for these
protocols as well as for "telnet" and "ftp" are passed to Tramp.

** Tramp

*** New connection method "nc", which allows to access dumb busyboxes.

** VC and related modes

*** New option `vc-annotate-background-mode' controls whether
the color range from `vc-annotate-color-map' is applied to the
background or to the foreground.

** Calculator: decimal display mode uses "," groups, so it's more
fitting for use in money calculations; factorial works with
non-integer inputs.

** HideIfDef mode now support full C/C++ expressions, argumented macro expansions
, interactive macro evaluation and automatic scanning of #defined symbols.

*** New custom variable `hide-ifdef-header-regexp' to define C/C++ header file
name patterns. Default case-insensitive .h, .hh, .hpp and .hxx.
*** New custom variable `hide-ifdef-expand-reinclusion-protection' to prevent
reinclusion protected header files from being fully hidden.
*** New custom variable `hide-ifdef-exclude-define-regexp' to define symbol
name patterns (e.x. all "FOR_DOXYGEN_ONLY_*") to be excluded.

** TeX mode

*** New custom variable `tex-print-file-extension' to help users who
use PDF instead of DVI.

** Obsolete packages

---
*** gulp.el

---
*** crisp.el, tpu-edt.el, ws-mode.el
These emulations of old editors are believed to be no longer relevant
 - contact emacs-devel@gnu.org if you disagree.

---
*** vi.el, vip.el (try M-x viper instead)


* New Modes and Packages in Emacs 24.5


* Incompatible Lisp Changes in Emacs 24.5

** window-configurations no longer record the buffers's marks.

** inhibit-modification-hooks now also inhibits lock-file checks, as well as
active region handling.

** deactivate-mark is now buffer-local.

** `cl-the' now asserts that its argument is of the given type.

+++